[package]
name = "puzzle-base"
version = "0.1.0"
authors = ["Dan Schreiber <dmschreiber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
tokio= {version = "1", features = ["full"] }
tokio-stream= "0.1"
tokio-util={version = "0.6.0", features = ["full"]}
cached="0.22.0"
pathfinding="2.1.1"
colored = "2.0.0"
itertools = "0.10.0"